# acausal-lattice

./: Cargo.toml  MEMORANDUM.md  README.md
crates/lattice-cce/: Cargo.toml
crates/lattice-cce/src/: lib.rs
crates/lattice-cli/: Cargo.toml
crates/lattice-cli/src/: main.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: lib.rs
crates/lattice-daemon/: Cargo.toml
crates/lattice-daemon/assets/: index.html
crates/lattice-daemon/src/: lib.rs
crates/lattice-llm/: Cargo.toml
crates/lattice-llm/src/: lib.rs
crates/lattice-tensor/: Cargo.toml
crates/lattice-tensor/src/: lib.rs
