[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
roaring = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
candle-core = "0.10.2"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures-util = "0.3"
tokio-stream = "0.1"
