[package]
name = "lattice-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
lattice-core = { path = "../lattice-core" }
lattice-tensor = { path = "../lattice-tensor" }
lattice-cce = { path = "../lattice-cce" }
lattice-llm = { path = "../lattice-llm" }
lattice-daemon = { path = "../lattice-daemon" }
roaring.workspace = true
candle-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
dotenvy.workspace = true
